--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="app_name">DistanceBetween</string>
     <string name="start_receiving_location">Start Receiving Location</string>
     <string name="stop_receiving_location">Stop Receiving Location</string>
+    <string name="username_edit_text_hint">Username</string>
+    <string name="save_username_text">Save username</string>
 </resources>
