--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="accept_connection">Accept</string>
     <string name="connection_request_message">%s wants to share location with you!</string>
     <string name="distance_between">Distance Between</string>
+    <string name="tap_on_button_to_accept_location_permission">Tap on button to accept location permission</string>
 </resources>
