--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="connect_to_friend">Connect to Friend</string>
     <string name="wait_for_friend">Wait for Friend</string>
     <string name="location_distance_screen">Location distance screen</string>
-    <string name="my_coordinates_longitude_latitude">My Coordinates: Longitude Latitude</string>
-    <string name="my_friends_coordinates_longitude_latitude">My Friends Coordinates: Longitude Latitude</string>
+    <string name="my_coordinates_longitude_latitude">My Coordinates:</string>
+    <string name="my_friends_coordinates_longitude_latitude">My Friends Coordinates:</string>
     <string name="distance_between_users">Distance between users:</string>
     <string name="just_waiting_for_friend">Just waiting for friend :)</string>
     <string name="connection_user_request">Connection user request</string>
@@ -28,4 +28,6 @@
     <string name="location_permission_message">This permission need for sharing location</string>
     <string name="button_ok_text">Ok</string>
     <string name="button_cancel_text">Cancel</string>
+    <string name="latitude">Latitude:</string>
+    <string name="longitude">Longitude:</string>
 </resources>
